fix: change wrong font path

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -41,8 +41,8 @@
 @font-face {
     font-family: 'Plus Jakarta Sans';
     src:
-    	url('../fonts/SpaceMono/PlusJakartaSans-Regular.woff2') format('woff2'),
-      url('../fonts/SpaceMono/PlusJakartaSans-Regular.woff') format('woff');
+    	url('../fonts/PlusJakartaSans/PlusJakartaSans-Regular.woff2') format('woff2'),
+     url('../fonts/PlusJakartaSans/PlusJakartaSans-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
